--- a/mmproteo/Pipfile
+++ b/mmproteo/Pipfile
@@ -1,7 +1,8 @@
-mmpro~=0.1
 requests~=2.22.0
 pandas~=1.1.3
 pyteomics~=4.4.1
 wget~=3.2
 setuptools~=45.2.0
 pyarrow~=2.0.0
+lxml~=4.5.0
+pytest~=6.2.1
