--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-mmproteo~=0+untagged.31.gd383a18.dirty
+mmproteo
 pytest
 sphinx==3.4.3
-versioneer~=0.19
+versioneer==0.19
 pandas~=1.2.1
 requests~=2.25.1
 pyteomics~=4.4.1
