--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pandas~=1.2.2
 requests~=2.25.1
 pyteomics~=4.4.1
 wget~=3.2
-setuptools~=53.0.0
+setuptools==54.0.0
 wheel~=0.36.2
 twine==3.3.0
 jupyter~=1.0.0
