improve Makefiles and make dependencies compatible with Python3.6 Jupyter Container

--- a/Makefile.jupyter
+++ b/Makefile.jupyter
@@ -1,40 +1,44 @@
-JUPYTER_IMAGE = tensorflow/tensorflow:latest-gpu-jupyter
-JUPYTER_LOCAL_PORT = 8888
-JUPYTER_PORT_PUBLISHING = -p $(JUPYTER_LOCAL_PORT):8888
-JUPYTER_VOLUME_MOUNTING = -v ${PWD}:/tf/workspace
-JUPYTER_CONTAINER_NAME = gpu_jupyter
-JUPYTER_GPU = --runtime=nvidia
-JUPYTER_PARAMETERS = $(JUPYTER_GPU) $(JUPYTER_VOLUME_MOUNTING) $(JUPYTER_PORT_PUBLISHING) $(JUPYTER_IMAGE)
+IMAGE = tensorflow/tensorflow:latest-gpu-jupyter
+LOCAL_PORT = 8888
+PORT_PUBLISHING = -p $(LOCAL_PORT):8888
+VOLUME_MOUNTING = -v ${PWD}:/tf/workspace
+CONTAINER_NAME = gpu_jupyter
+GPU = --runtime=nvidia
+PARAMETERS = $(GPU) $(VOLUME_MOUNTING) -u $(shell id -u):$(shell id -g) $(PORT_PUBLISHING) $(IMAGE)
 
-.PHONY: monitor-gpu docker-pull docker-test docker-deploy-only docker-token docker-deploy-prepare docker-deploy docker-stop docker-rm docker-undeploy docker-redeploy
+.PHONY: monitor-gpu pull test deploy-only token deploy-prepare deploy stop rm undeploy redeploy
 
 monitor-gpu:
 	watch -n 1 nvidia-smi
 
-docker-pull:
-	docker pull $(JUPYTER_IMAGE)
+pull:
+	docker pull $(IMAGE)
 
-docker-test: docker-pull
-	docker run -it --rm $(JUPYTER_PARAMETERS)
+test: pull
+	docker run -it --rm $(PARAMETERS)
 
-docker-deploy-only: docker-pull
-	docker run --restart always --detach --name=$(JUPYTER_CONTAINER_NAME) $(JUPYTER_PARAMETERS)
+deploy-only: pull
+	docker run --restart always --detach --name=$(CONTAINER_NAME) $(PARAMETERS)
 	sleep 2
 
-docker-deploy-prepare:
-	docker exec $(JUPYTER_CONTAINER_NAME) pip install --upgrade -r /tf/workspace/requirements.txt
+deploy-prepare:
+	docker exec $(CONTAINER_NAME) pip install --upgrade pip
+	docker exec $(CONTAINER_NAME) pip install --upgrade -r /tf/workspace/requirements.txt
 
-docker-token:
-	-docker logs $(JUPYTER_CONTAINER_NAME) 2>&1 | grep \?token\= | tail -n 1 | grep -o 'http.*$$'
+token:
+	-docker logs $(CONTAINER_NAME) 2>&1 | grep \?token\= | tail -n 1 | grep -o 'http.*$$'
 
-docker-deploy: | docker-deploy-only docker-token docker-deploy-prepare
+deploy: | deploy-only token deploy-prepare
 
-docker-stop:
-	-docker stop $(JUPYTER_CONTAINER_NAME)
+stop:
+	-docker stop $(CONTAINER_NAME)
 
-docker-rm:
-	-docker rm $(JUPYTER_CONTAINER_NAME)
+rm:
+	-docker rm $(CONTAINER_NAME)
 
-docker-undeploy: | docker-stop docker-rm
+undeploy: | stop rm
 
-docker-redeploy: | docker-undeploy docker-deploy
+redeploy: | undeploy deploy
+
+enter:
+	docker exec -it $(CONTAINER_NAME) /bin/bash
