--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-mmproteo~=0.3.0
+mmproteo~=0.4.0
 pytest~=6.2.2
+pytest-cov
 sphinx==3.5.1
 versioneer==0.19
-pandas~=1.2.2
+pandas~=1.1.5
 requests~=2.25.1
 pyteomics~=4.4.1
 wget~=3.2
@@ -11,4 +12,5 @@ wheel~=0.36.2
 twine==3.3.0
 jupyter~=1.0.0
 tensorflow~=2.4.1
-numpy~=1.20.1
+numpy~=1.19.5
+pip
