simplify requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
 mmproteo
-pytest~=6.2.2
-pytest-cov
-sphinx==3.5.1
-versioneer==0.19
-pandas~=1.1.5
-requests~=2.25.1
-pyteomics~=4.4.1
-wget~=3.2
-setuptools==54.0.0
-wheel~=0.36.2
-twine==3.3.0
+pandas
+requests
+pyteomics
+wget
 jupyter~=1.0.0
 tensorflow~=2.4.1
 numpy~=1.19.5
