--- a/Makefile.jupyter
+++ b/Makefile.jupyter
@@ -24,6 +24,8 @@ deploy-only: pull
 deploy-prepare:
 	docker exec $(CONTAINER_NAME) pip install --upgrade pip
 	docker exec $(CONTAINER_NAME) pip install --upgrade -r /tf/workspace/requirements.txt
+	docker exec -u root -it $(CONTAINER_NAME) apt update
+	docker exec -u root -it $(CONTAINER_NAME) apt install -y graphviz
 
 token:
 	-docker logs $(CONTAINER_NAME) 2>&1 | egrep -o \?token\=\\S+ | tail -n 1 | cut -d "=" -f 2
@@ -42,3 +44,6 @@ redeploy: | undeploy deploy
 
 enter:
 	docker exec -it $(CONTAINER_NAME) /bin/bash
+
+sudo-enter:
+	docker exec -u root -it $(CONTAINER_NAME) /bin/bash
