--- a/Makefile.jupyter
+++ b/Makefile.jupyter
@@ -1,4 +1,4 @@
-IMAGE = tensorflow/tensorflow:latest-gpu-jupyter
+IMAGE = tensorflow/tensorflow:2.4.1-gpu-jupyter
 LOCAL_PORT = 8888
 PORT_PUBLISHING = --network host
 VOLUME_MOUNTING = -v ${PWD}:/tf/workspace
