--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+# (data) processing
 -r mmproteo/requirements.txt
-mmproteo~=0.8.1
-jupyter~=1.0.0
-xlrd~=2.0.1
-openpyxl~=3.0.7
-keyrings.alt~=4.0.2
-graphviz~=0.16
-pydot~=1.4.2
-pydotplus~=2.0.2
-pyyaml~=5.4.1
+mmproteo~=0.8.2
 tensorflow-text~=2.4.1
 tf-models-official~=2.4.0
 keras-tuner~=1.0.3
+
+# data parsing
+xlrd~=2.0.1
+openpyxl~=3.0.7
+pyyaml~=5.4.1
+
+# visualization
+graphviz~=0.16
+pydot~=1.4.2
+pydotplus~=2.0.2
+
+# development environment
+jupyter~=1.0.0
+
+# suppressing warnings
+keyrings.alt~=4.0.2
